@@ -1,5 +1,7 @@
 1.8.1 - 2018-XX-XX
 
+  1. Add `AUTO` mode support for Cloud Storage Requester Pays feature.
+
 
 1.8.0 - 2018-03-15
 
